--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Moedas Sociais Digitais - MSD">
     <meta name="author" content="Moedas Sociais Digitais - MSD">
-    <link rel="icon" href="https://moedassociais.github.io/assets/logo-2.jpg">
+    <link rel="icon" href="https://moedassociais.github.io/assets/MSD-LOGO-V2.png">
 
     <title>Moedas Sociais Digitais - MSD</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
