--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   
-<body>
+<body style="text-align: center;">
 <header><h2>Moedas Sociais Digitais - MSD</h2></header>
 <hr />
 <h3><a href="https://moedassociais.org">www.moedassociais.org</a></h3>
