--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </head>
   
 <body style="text-align: center;">
+  <img height="150" src="https://moedassociais.github.io/assets/MSD-LOGO-V2.png" />
+  <br />
 <header><h2>Moedas Sociais Digitais - MSD</h2></header>
 <hr />
 <h3><a href="https://moedassociais.org">www.moedassociais.org</a></h3>
